# Brambles

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BRAMBLES.sln  Brambles.vcxproj  Brambles.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  demo.vcxproj  demo.vcxproj.filters  rend.vcxproj  rend.vcxproj.filters
assets/: Thumbs.db
assets/map/: 170726_mia348_126884_601_100kmesh_OBJ.mtl  c1a0.mtl  c1a0_material_1.tga  c1a0_material_100.tga  c1a0_material_102.tga  c1a0_material_103.tga  c1a0_material_104.tga  c1a0_material_109.tga  c1a0_material_11.tga  c1a0_material_112.tga  c1a0_material_113.tga  c1a0_material_115.tga  c1a0_material_116.tga  c1a0_material_120.tga  c1a0_material_123.tga  c1a0_material_13.tga  c1a0_material_17.tga  c1a0_material_19.tga  c1a0_material_2.tga  c1a0_material_20.tga  c1a0_material_22.tga  c1a0_material_23.tga  c1a0_material_24.tga  c1a0_material_25.tga  c1a0_material_26.tga  c1a0_material_29.tga  c1a0_material_30.tga  c1a0_material_32.tga  c1a0_material_36.tga  c1a0_material_41.tga  c1a0_material_46.tga  c1a0_material_47.tga  c1a0_material_48.tga  c1a0_material_49.tga  c1a0_material_50.tga  c1a0_material_55.tga  c1a0_material_57.tga  c1a0_material_59.tga  c1a0_material_6.tga  c1a0_material_60.tga  (+21 more)
assets/map/c1a0/: c1a0_material_0.tga  c1a0_material_101.tga  c1a0_material_108.tga  c1a0_material_110.tga  c1a0_material_111.tga  c1a0_material_114.tga  c1a0_material_119.tga  c1a0_material_124.tga  c1a0_material_127.tga  c1a0_material_18.tga  c1a0_material_21.tga  c1a0_material_33.tga  c1a0_material_35.tga  c1a0_material_37.tga  c1a0_material_39.tga  c1a0_material_42.tga  c1a0_material_45.tga  c1a0_material_51.tga  c1a0_material_52.tga  c1a0_material_53.tga  c1a0_material_56.tga  c1a0_material_58.tga  c1a0_material_69.tga  c1a0_material_7.tga  c1a0_material_72.tga  c1a0_material_75.tga  c1a0_material_81.tga  c1a0_material_83.tga  c1a0_material_84.tga  c1a0_material_88.tga  c1a0_material_93.tga  c1a0_material_94.tga
assets/map/c1a0d/: c1a0d.mtl  c1a0d_material_0.tga  c1a0d_material_1.tga  c1a0d_material_10.tga  c1a0d_material_100.tga  c1a0d_material_101.tga  c1a0d_material_102.tga  c1a0d_material_103.tga  c1a0d_material_104.tga  c1a0d_material_105.tga  c1a0d_material_106.tga  c1a0d_material_107.tga  c1a0d_material_108.tga  c1a0d_material_109.tga  c1a0d_material_11.tga  c1a0d_material_110.tga  c1a0d_material_111.tga  c1a0d_material_112.tga  c1a0d_material_113.tga  c1a0d_material_114.tga  c1a0d_material_115.tga  c1a0d_material_116.tga  c1a0d_material_117.tga  c1a0d_material_118.tga  c1a0d_material_119.tga  c1a0d_material_12.tga  c1a0d_material_120.tga  c1a0d_material_121.tga  c1a0d_material_122.tga  c1a0d_material_123.tga  c1a0d_material_124.tga  c1a0d_material_125.tga  c1a0d_material_126.tga  c1a0d_material_127.tga  c1a0d_material_128.tga  c1a0d_material_129.tga  c1a0d_material_13.tga  c1a0d_material_130.tga  c1a0d_material_131.tga  c1a0d_material_132.tga  (+128 more)
assets/map/c1a0e/: c1a0e.mtl  c1a0e_material_0.tga  c1a0e_material_1.tga  c1a0e_material_10.tga  c1a0e_material_11.tga  c1a0e_material_12.tga  c1a0e_material_13.tga  c1a0e_material_14.tga  c1a0e_material_15.tga  c1a0e_material_16.tga  c1a0e_material_17.tga  c1a0e_material_18.tga  c1a0e_material_19.tga  c1a0e_material_2.tga  c1a0e_material_20.tga  c1a0e_material_21.tga  c1a0e_material_22.tga  c1a0e_material_23.tga  c1a0e_material_24.tga  c1a0e_material_25.tga  c1a0e_material_26.tga  c1a0e_material_27.tga  c1a0e_material_28.tga  c1a0e_material_29.tga  c1a0e_material_3.tga  c1a0e_material_30.tga  c1a0e_material_31.tga  c1a0e_material_32.tga  c1a0e_material_33.tga  c1a0e_material_34.tga  c1a0e_material_35.tga  c1a0e_material_36.tga  c1a0e_material_37.tga  c1a0e_material_38.tga  c1a0e_material_39.tga  c1a0e_material_4.tga  c1a0e_material_40.tga  c1a0e_material_41.tga  c1a0e_material_42.tga  c1a0e_material_43.tga  (+56 more)
assets/map/c1a2/: c1a2.mtl  c1a2_material_0.tga  c1a2_material_1.tga  c1a2_material_10.tga  c1a2_material_100.tga  c1a2_material_101.tga  c1a2_material_102.tga  c1a2_material_103.tga  c1a2_material_104.tga  c1a2_material_105.tga  c1a2_material_106.tga  c1a2_material_107.tga  c1a2_material_108.tga  c1a2_material_109.tga  c1a2_material_11.tga  c1a2_material_110.tga  c1a2_material_111.tga  c1a2_material_112.tga  c1a2_material_114.tga  c1a2_material_115.tga  c1a2_material_116.tga  c1a2_material_117.tga  c1a2_material_118.tga  c1a2_material_119.tga  c1a2_material_12.tga  c1a2_material_120.tga  c1a2_material_121.tga  c1a2_material_122.tga  c1a2_material_123.tga  c1a2_material_124.tga  c1a2_material_125.tga  c1a2_material_126.tga  c1a2_material_127.tga  c1a2_material_13.tga  c1a2_material_14.tga  c1a2_material_15.tga  c1a2_material_16.tga  c1a2_material_17.tga  c1a2_material_18.tga  c1a2_material_19.tga  (+88 more)
assets/map/compound/: 1.mtl
assets/map/cs/: 1.mtl
assets/map/hl1/: c1a0_material_10.tga  c1a0_material_105.tga  c1a0_material_106.tga  c1a0_material_107.tga  c1a0_material_117.tga  c1a0_material_118.tga  c1a0_material_12.tga  c1a0_material_121.tga  (+30 more)
assets/shaders/: debugfrag.glsl  debugvert.glsl  fragmentShader.glsl  funortho.vert  lightfrag.frag  lightvert.vert  orthoFragmentShader.glsl  orthofrag.frag
shaders/: fragmentShader.glsl  orthoVertexShader.glsl
src/Brambles/: AudioSource.cpp  AudioSource.h  BoxCollider.cpp  BoxCollider.h  Brambles.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  DebugRenderer.cpp  DebugRenderer.h  Entity.cpp  Entity.h  Font.h  Gui.cpp  Gui.h  Input.cpp  Input.h  LightManager.h  MeshCollider.cpp  MeshCollider.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  Resources.h  RigidBody.cpp  RigidBody.h  Sound.cpp  Sound.h  SoundSource.cpp  SoundSource.h  Timer.cpp  Timer.h  Transform.cpp  Transform.h  (+4 more)
src/demo/: main.cpp
src/rend/: Font.cpp  Font.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TriangleRenderer.cpp  TriangleRenderer.h  Utilities.cpp  Utilities.h  rend.h
(+29 files in other folders)
